canvas-container: Cancel active rubberband if a new one is started

Wayland allows multiple pointers to be active at the same time, e.g. when
a Wacom tablet and mouse are both connected to a system. This means that
it is possible to recieve a "rubberband start" event from a second tool
while a rubberband is already active. At the moment, this results in stray
selection rectangles since the canvas does not properly perform cleanup.

To prevent these graphical glitches from occuring, we can simply cancel
any existing rubberband operation if a second one attempts to start. The
only additional minor complication is ensuring that the new rubberband
is not stopped when the first tool sends a button-up event.

https://bugzilla.gnome.org/show_bug.cgi?id=783797